response handling refactored
(removed nesting of APICommandResponse)