@@ -1,8 +1,11 @@
 package ru.bardinpetr.itmo.lab5.models.commands.api;
 
 import lombok.Data;
-import ru.bardinpetr.itmo.lab5.models.commands.APICommand;
+import lombok.Getter;
+import lombok.Setter;
+import ru.bardinpetr.itmo.lab5.models.commands.requests.UserAPICommand;
 import ru.bardinpetr.itmo.lab5.models.commands.responses.APICommandResponse;
+import ru.bardinpetr.itmo.lab5.models.commands.responses.UserPrintableAPICommandResponse;
 import ru.bardinpetr.itmo.lab5.models.data.Organization;
 
 import java.util.List;
@@ -12,7 +15,7 @@ import java.util.List;
  */
 
 @Data
-public class UniqueOrganisationCommand extends APICommand {
+public class UniqueOrganisationCommand extends UserAPICommand {
     @Override
     public String getType() {
         return "print_unique_organization";
@@ -23,28 +26,22 @@ public class UniqueOrganisationCommand extends APICommand {
         return new UniqueOrganisationCommandResponse();
     }
 
-    public static class UniqueOrganisationCommandResponse implements APICommandResponse {
+    @Getter
+    @Setter
+    public static class UniqueOrganisationCommandResponse extends APICommandResponse implements UserPrintableAPICommandResponse {
         private List<Organization> organizations;
-
-        public List<Organization> getOrganizations() {
-            return organizations;
-        }
-
-        public void setOrganizations(List<Organization> organizations) {
-            this.organizations = organizations;
-        }
 
         @Override
         public String getUserMessage() {
-            String s = "organization field unique values:\n";
-            for (Organization i : organizations) {
-                s += String.format(
-                        "\tFull name: %s, type: %s\n",
-                        i.getFullName(),
-                        i.getType()
+            var s = new StringBuilder("organization field unique values:\n");
+            for (Organization i : organizations)
+                s.append(
+                        "\tFull name: %s, type: %s\n".formatted(
+                                i.getFullName(),
+                                i.getType()
+                        )
                 );
-            }
-            return s;
+            return s.toString();
         }
     }
 }
